--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+:root{
+    --star-size: 1px;
+}
+
 html,body{
     width: 100%;
     height: 100%;
@@ -15,8 +19,9 @@ html,body{
 }
 .star{
     position: absolute;
-    width: 10px;
-    height: 10px;
+    width: var(--star-size);
+    height: var(--star-size);
     border-radius: 50%;
     background: white;
+    transition-duration: 6s;
 }
